Add Jpa Dto